syntax = "proto3";

package proto;

option go_package = "proto/";

service OrchistratorService {
  rpc Install(InstallRequest) returns (InstallResponse) {}
  rpc UnInstall(UnInstallRequest) returns (UnInstallResponse) {}
}

message InstallRequest {
  string KubeconfigPath = 1;
  string Context = 2;
  string Namespace = 3;
  string HelmTimeout = 4;
  repeated string HelmValuesFiles = 5;
  repeated string HelmValues = 6;
  repeated string HelmFileValues = 7;
  repeated string HelmStringValues = 8;
}

message InstallResponse {}

message UnInstallRequest {
  string KubeconfigPath = 1;
  string Context = 2;
  string Namespace = 3;
  string HelmTimeout = 4;
}

message UnInstallResponse {}
