syntax = "proto3";

option go_package = "proto/";

package proto;

import "progress.proto";

service StartProcess {
  rpc Run(StartRequest) returns (StartResponse) {}
  rpc RunWithProgress(StartWithProgressRequest) returns (stream progress.ProgressResponse) {}
}

message StartRequest {
  bool watch = 1;
}

message StartResponse {
}

message StartWithProgressRequest {
  string refresh_interval = 1;
}
